--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <body>
   <div class = "nav">
     <ul>
-      <li><a href="https://rrs4z4zf08doghb55ir7fq-on.drv.tw/Scienti.htfi/"> scientific cal.</a></li>
-      <li><a href="https://rrs4z4zf08doghb55ir7fq-on.drv.tw/numsyscal.htfi/"> numsys.cal.</a></li>
+      <li><div class="cv-btn"><a href="https://rrs4z4zf08doghb55ir7fq-on.drv.tw/Scienti.htfi/"> scientific cal.</a></li></div>
+      <li><div class="cv-btn"><a href="https://rrs4z4zf08doghb55ir7fq-on.drv.tw/numsyscal.htfi/"> numsys.cal.</a></li></div>
     
 
 
